fix style align issue w. new data load + css fixes

--- a/code/src/components/Album/Album.css
+++ b/code/src/components/Album/Album.css
@@ -1,11 +1,11 @@
+/* ---------------------------- WRAPPER AND ALIGN --------------------------- */
 .album {
   position: relative;
   display: flex;
   flex-direction: column;
 }
+
 .album__image {
-  width: 100%;
-  height: 100%;
   margin-bottom: 0.5em;
 }
 
@@ -15,6 +15,8 @@
   width: 100%;
   height: 100%;
 }
+
+/* ----------------------- ANIMATIONS AND TRANSITIONS ----------------------- */
 
 .album:hover > .album__icons--wrapper {
   display: block;
@@ -30,21 +32,23 @@
   }
 }
 
+/* ------------------------------ MEDIA QUERIES ----------------------------- */
+
+/* Large screens */
 @media (min-width: 1073px) {
   .album {
-    flex: 1 0 calc(20% - 10px);
     max-width: calc(20% - 10px);
   }
 }
+/* Medium Screens (tablets and smaller desktops */
 @media (max-width: 1073px) {
   .album {
-    flex: 1 0 calc(50% - 10px);
     max-width: calc(45% - 10px);
   }
 }
+/* Small screens (mobile phones and smaller tablets) */
 @media (max-width: 555px) {
   .album {
-    flex: 1 0 calc(100% - 10px);
     max-width: calc(90% - 10px);
   }
 }
