--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,7 +22,7 @@ h1 {
   font-size: 24px;
   margin: 0.5em !important;
   padding: 0.5em 0;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #a0a0a0;
 }
 h3,
 h1 {
